# Beer-game

./: CMakeLists.txt  README-se-02.md  README.md  references.json
docs/: CMakeLists.txt  Doxyfile.in
resources/: resources.qrc
src/: CMakeLists.txt  beergamewindow.cpp  beergamewindow.h  beergamewindow.ui  game.cpp  game.h  instructor.cpp  instructor.h  instructorwindow.cpp  instructorwindow.h  instructorwindow.ui  main.cpp  order.cpp  order.h  player.cpp  player.h  playerclient.cpp  playerevent.h  playerinterface.cpp  playerinterface.h  playerinterface.ui  shipment.cpp  shipment.h
src/client/: CMakeLists.txt  ClientInterface.ui  clientinterface.cpp  clientinterface.h  main.cpp  playerclient.cpp  playerclient.h
src/server/: CMakeLists.txt  beergameserver.cpp  beergameserver.h  beergameserverwindow.cpp  beergameserverwindow.h  beergameserverwindow.ui  main.cpp  playerinterfaceserver.cpp  playerinterfaceserver.h
test/: CMakeLists.txt  tests-sprint3.cpp  tests_fn.cpp
